Etapa 2/Compilador minijava - etapa 2/bin/tests/tests sintácticos/invalidos/test9.java
/*
Test9
Objetivo: Detectar error ante un bloque no cerrado.

*/

class UnaClase {
	
	UnaClase (){
	
	
}